name:                AsteroidRoulette
version:             1.0.0.0
synopsis:            Very simple reactive banana game
-- description:         
license:             MIT
license-file:        LICENSE
author:              Ahti Katiska
maintainer:          ahti.katiska@helsinki.fi
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable AsteroidRoulette
  main-is:             AsteroidGame.hs
  -- other-modules:       
  other-extensions:    ScopedTypeVariables, FlexibleInstances
  build-depends:       base >=4.8 && <4.9, random >=1.1 && <1.2, reactive-banana >=0.9 && <0.10
  -- hs-source-dirs:      
  default-language:    Haskell2010
