name:                AsteroidRoulette
version:             0.1.0.0
synopsis:            Very simple reactive banana game
license:             MIT
license-file:        LICENSE
author:              Ahti Katiska
maintainer:          ahti.katiska@helsinki.fi
copyright:           2017 Ahti Katiska
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable AsteroidRoulette
  hs-source-dirs:      app
  main-is:             AsteroidGame.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >=4.8 && <4.9, random >=1.1 && <1.2, reactive-banana >=0.9 && <0.10
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/KatsCyl/AsteroidRoulette
